--- a/Fishing Webpage (html, css)/style.css
+++ b/Fishing Webpage (html, css)/style.css
@@ -1,62 +1,192 @@
-p{
-    border-style: outset;
-    border-width: 5px;
-    border-color: goldenrod;
-}
-
-body{
+html, body {
+    margin: 0;
+    padding: 0;
     background-image: url("images/backgrownd.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    
 }
 
-h1{
-    background: linear-gradient(to right, skyblue,lightgreen);
+.logoAudio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    position: relative;
+}
+
+#logo {
+    height: 200px;
+    align-self: flex-start;
+    margin-left: 20px;
+    margin-top: 20px;
+    border-style: outset;
+    border-width: 5px;
+    border-color: green;
+   
+}
+
+#audio-container {
+    top: 10px;
+    position: absolute;
+    align-self: flex-end;
+    margin-right: 20px;
+}
+
+#title {
+    font-size: 5rem;  
+    margin: 20px; 
+    border-style: outset;
+    border-width: 5px;
+    border-color: goldenrod;
+}
+
+p {
+    border-style: outset;
+    border-width: 5px;
+    border-color: goldenrod;
+    background: linear-gradient(to right, skyblue, lightgreen);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-family: arial;
+}
+
+
+
+h1 {
+    background: linear-gradient(to right, skyblue, lightgreen);
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
 
-p{
-    background: linear-gradient(to right, skyblue,lightgreen);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
-h3{
-    color: rgb(209, 116, 23);
+h3 {
+    color: rgb(209, 23, 23);
     font-family: Arial, Helvetica, sans-serif;
     border-style: outset;
-    border-width: 3px;
- border-color: green;
+    border-width: 5px;
+    border-color: green;
+    width: 300px;
+    background: linear-gradient(to right, skyblue, lightgreen);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
-li{
-    color: red;
+li {
+    color: rgb(14, 13, 13);
     font-family: 'Arial';
     font-size: larger;
 }
 
-lable{
+label {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     border-style: outset;
     border-width: 3px;
- border-color: green;
-}
-
-audio{
-    
-    position:absolute ;
-    top: 30px;
-    left: 150px;
+    border-color: green;
     
 }
 
-img{
-    position:sticky;
-    top : 0px
+#reg {
+    width: 300px;
+    text-align: center;
+    border-style: outset;
+    border-width: 5px;
+    border-color: rgb(9, 153, 40);
+   
 }
+
+@keyframes flash {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0; }
+}
+
+.flashing-message {
+    margin-top: 100px;
+    font-size: 20rem;  
+    color: rgb(214, 8, 22); 
+    animation: flash 2s infinite; 
+    border: 5px solid rgb(214, 8, 22);  
+    padding: 20px;  
+    text-align: center;  
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.welcome-link {
+    color: rgb(22, 22, 214);  
+    margin-left: 30px;  
+    text-decoration: none; 
+    font-size: 1.2rem; 
+}
+
+.welcome-link:hover {
+    color: rgb(255, 98, 0);  
+}
+
+.form-container {
+    max-width: 500px;  /* Adjust the width as needed */
+    margin: 50px auto;  /* Center the form on the page */
+    padding: 20px;
+    background: linear-gradient(to right, goldenrod, lightgreen);
+    background-repeat: no-repeat;
+    background-attachment: fixed;  /* Background color for the form */
+    border-radius: 10px;  /* Rounded corners */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);  /* Optional: Add a shadow for a nice effect */
+}
+
+input {
+    color: white;  /* Change the color of the input text */
+    width: 100%;  /* Make input fields take up the full width */
+    padding: 10px;
+    margin: 5px 0;
+    border: 3px solid #c90b0b;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background: #515151; 
+}
+
+h1#reg {
+    font-size: 2rem;  /* Optional: Change the font size of the register heading */
+    text-align: center;  /* Center the heading */
+    color: rgb(192, 53, 11);  /* Optional: Change the color of the heading */
+}
+
+.return-container {
+    margin-bottom: 20px;
+    margin-top: 300px;
+    text-align: center;  /* Center text within the container */
+}
+
+.return-link {
+    color: greenyellow;  /* Change text color */
+    background-color: black;  /* Background color */
+    padding: 20px 40px;  /* Add padding */
+    text-decoration: none;  /* Remove underline */
+    border-radius: 5px;  /* Rounded corners */
+    font-size: 2rem;  /* Make text bigger */
+    transition: background-color 0.3s, color 0.3s;  /* Add transition for hover effect */
+}
+
+.return-link:hover {
+    color: black;  /* Change text color on hover */
+    background-color: greenyellow;  /* Change background color on hover */
+}
+
+.equ-container {
+    max-width: 500px;  /* Adjust the width as needed */
+    margin: 50px auto;  /* Center the form on the page */
+    padding: 20px;
+    background: linear-gradient(to right, goldenrod, lightgreen);
+    background-repeat: no-repeat;
+    background-attachment: fixed;  /* Background color for the form */
+    border-radius: 10px;  /* Rounded corners */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);  /* Optional: Add a shadow for a nice effect */
+}
+
+
 
