--- a/To do List Project/style.css
+++ b/To do List Project/style.css
@@ -1,10 +1,12 @@
 h1 {
+    font-size:50px; 
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     border-style: outset;
-    border-width: 5px;
+    border-radius: 10px;
+    border-width: 8px;
     border-color: black;
-    width: 350px;
+    width: 400px;
     background: greenyellow;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -14,17 +16,18 @@ h1 {
 body {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: center;   
     height: 50vh;
     margin: 0;
+    background-image: url("image3.webp");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    margin-top: 50px;
 }
 
-.input-container {
-    display: flex;
-    align-items: center; 
-    gap: 10px; 
-}
+
 
 input {
     padding: 8px;
@@ -49,3 +52,16 @@ button {
     display: inline-block;
     margin-top: 10px; 
 }
+
+li {
+    font-size:17px; 
+    font-family: Arial;
+    font-weight: bold;
+}
+
+.input-container {
+    display: flex;
+    align-items: center; 
+    gap: 10px; 
+}
+
