--- a/To do List Project/style.css
+++ b/To do List Project/style.css
@@ -115,5 +115,28 @@ p{
 
 
 
+.counter-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
+#deleteAllButton {
+    margin-left: auto;
+    padding: 5px;
+    border-radius: 7px;
+    border: 4px solid red; 
+    cursor: pointer;
+    border-width: 5px;
+    display: inline-block;
+    margin-top: 8px;
+    font-size: 15px;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
 
+#deleteAllButton:hover {
+    background-color: red;
+    color: white;
+}
