--- a/To do List Project/style.css
+++ b/To do List Project/style.css
@@ -6,12 +6,24 @@ h1 {
     border-radius: 10px;
     border-width: 8px;
     border-color: black;
-    width: 400px;
+    width: 490px;
     background: greenyellow;
     background-repeat: no-repeat;
     background-attachment: fixed;
     text-align: center;
+    margin-left: auto;
 }
+
+@keyframes flashText {
+    0% { color: black; }
+    50% { color: red; }
+    100% { color: black; }
+}
+
+#flash {
+    animation: flashText 2s infinite;
+}
+
 
 body {
     display: flex;
@@ -30,24 +42,24 @@ body {
 
 
 input {
-    padding: 8px;
+   
     border: 3px solid black;
     flex: 1;
      margin-top: 50px; 
-    padding: 5px;
+     padding:8px;
     border-color: black;
     border-width: 3px;
 }
 
 button {
-    padding: 5px;
+    padding:5px;
     border-radius: 7px;
     border: 4px solid green; 
     cursor: pointer;
-    margin-left: 10px;
+    margin-left: 50px;
     border-width: 5px;
     display: inline-block;
-    margin-top: 10px; 
+    margin-top: 50px; 
     font-size: 15px;
     font-family: Arial, sans-serif;
     font-weight: bold;
@@ -67,13 +79,14 @@ li {
     justify-content: space-between;
     align-items: center;
     list-style: none;
+    padding-top: 5px;
 }
 
 li::before {
-    content: "• ";
-    margin-right: 10px;
+    content: "⚫";
+    margin-right: 8px;
+    
 }
-
 
 
 .input-container {
@@ -96,13 +109,17 @@ p{
 }
 
 .counter{
-    border-width: 1px;
+    border-width: 1.5px;
     border-color: black;
+    width: 100%;
+    margin-top: 10px;
 }
+
+
 
 #deleteButton  {
     background-color: rgb(223, 219, 219);
-    
+    margin-top: 8px;
     border-color: red;
     border-width: 3px;
     border-radius: 40px;  
@@ -140,3 +157,19 @@ p{
     background-color: red;
     color: white;
 }
+
+
+#taskList{
+    padding-left: 10px;
+}
+
+.container {
+    background-color: white;
+    padding: 100px;
+    padding-top: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    border: 4px solid black
+}
+
