--- a/To do List Project/style.css
+++ b/To do List Project/style.css
@@ -31,7 +31,7 @@ body {
     align-items: center;   
     height: 50vh;
     margin: 0;
-    background-image: url("image3.webp");
+    background-image: url("image.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
