--- a/To do List Project/style.css
+++ b/To do List Project/style.css
@@ -1,5 +1,5 @@
 h1 {
-    font-size:50px; 
+    font-size: 50px;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     border-style: outset;
@@ -24,13 +24,12 @@ h1 {
     animation: flashText 2s infinite;
 }
 
-
 body {
     display: flex;
     flex-direction: column;
-    align-items: center;   
+    align-items: center;
     height: 50vh;
-    margin: 0;
+    margin: 0px;
     background-image: url("image.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -39,32 +38,28 @@ body {
     margin-top: 50px;
 }
 
-
-
 input {
-   
     border: 3px solid black;
     flex: 1;
-     margin-top: 50px; 
-     padding:8px;
+    margin-top: 50px;
+    padding: 8px;
     border-color: black;
     border-width: 3px;
-  
 }
 
 button {
-    padding:5px;
+    padding: 5px;
     border-radius: 7px;
-    border: 4px solid green; 
+    border: 4px solid green;
     cursor: pointer;
     margin-left: 50px;
     border-width: 5px;
     display: inline-block;
-    margin-top: 50px; 
+    margin-top: 50px;
     font-size: 15px;
     font-family: Arial, sans-serif;
     font-weight: bold;
-    transition: background-color 0.3s ease, color 0.3s ease; 
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 button:hover {
@@ -83,9 +78,15 @@ li {
     padding-top: 5px;
 }
 
-li::before { 
+.task-item::before {
     content: "⚫"; 
-    margin-right: 8px; 
+    margin-right: 8px;
+    font-size: 18px;
+}
+
+
+.task-item.completed::before {
+    content: "✅"; 
 }
 
 .container {
@@ -95,53 +96,46 @@ li::before {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
-    border: 4px solid black
+    border: 4px solid black;
 }
-
-
 
 .input-container {
     display: flex;
-    align-items: center; 
-    gap: 10px; 
+    align-items: center;
+    gap: 10px;
 }
 
-#taskCount{
-    font-size:17px; 
-    font-family: Arial;
-    font-weight: bold;
-
-}
-
-p{
-    font-size:17px; 
+#taskCount {
+    font-size: 17px;
     font-family: Arial;
     font-weight: bold;
 }
 
-.counter{
+p {
+    font-size: 17px;
+    font-family: Arial;
+    font-weight: bold;
+}
+
+.counter {
     border-width: 1.5px;
     border-color: black;
     width: 100%;
     margin-top: 10px;
 }
 
-
-
-#deleteButton  {
+#deleteButton {
     background-color: rgb(223, 219, 219);
     margin-top: 8px;
     border-color: red;
     border-width: 3px;
-    border-radius: 40px;  
+    border-radius: 40px;
 }
 
 #deleteButton:hover {
     background-color: red;
     color: white;
 }
-
-
 
 .counter-container {
     display: flex;
@@ -153,7 +147,7 @@ p{
     margin-left: auto;
     padding: 5px;
     border-radius: 7px;
-    border: 4px solid red; 
+    border: 4px solid red;
     cursor: pointer;
     border-width: 5px;
     display: inline-block;
@@ -169,10 +163,10 @@ p{
     color: white;
 }
 
-
-#taskList{
+#taskList {
     padding-left: 10px;
 }
+
 
 
 
