--- a/Weather app/style.css
+++ b/Weather app/style.css
@@ -50,7 +50,7 @@ body{
 }
 
 .search button img{
-    width: 40px;
+    width: 30px;
 }
 
 .weather-icon{
@@ -84,7 +84,24 @@ body{
     text-align: left;
 }
 
+.col img{
+    width: 40px;
+    margin-right: 10px;
+}
+
 .humidity, .wind{
     font-size: 28px;
     margin-top: -6px;
 } 
+
+.weather{
+    display: none;
+}
+
+.error{
+    text-align: left;
+    margin-left: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+    display: none;
+}
