--- a/Fishing Project/style.css
+++ b/Fishing Project/style.css
@@ -165,7 +165,7 @@ h2 {
   border-radius: 20px;
   padding: 40px 35px;
   text-align: center;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   height: 650px;
 }
 
