--- a/Fishing Project/style.css
+++ b/Fishing Project/style.css
@@ -366,3 +366,11 @@ p {
 .country-txt{
   font-size: x-large;
 }
+
+.conditions-txt{
+  font-size: x-large;
+}
+
+.temp-txt{
+  font-size: x-large;
+}
