--- a/Fishing Project/style.css
+++ b/Fishing Project/style.css
@@ -73,6 +73,11 @@ body {
   flex-direction: column;
   gap: 10px;
   margin-bottom: 20px;
+  transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.input-section :hover{
+  transform: scale(1.2);
 }
 
 input,
@@ -129,12 +134,19 @@ li {
 }
 
 .fish-icon {
-  width: 150px;
+  width: auto;
   height: 80px;
   border-radius: 5px;
   padding: auto;
   margin-left: 50px;
   margin-right: 30px;
+  transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.fish-icon:hover{
+  transform: scale(1.7);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
 }
 
 .delete-btn {
@@ -183,6 +195,25 @@ p {
     1px 1px 0 #000;
 }
 
+.custom-file-upload {
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  background-color: #007bff;
+  color: white;
+  border-radius: 4px;
+  border-radius: 20px;
+  transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.custom-file-upload:hover {
+  background-color: #0056b3;
+}
+
+#imageUpload {
+  display: none;
+}
+
 /* Styles for weather container */
 
 
@@ -207,6 +238,11 @@ p {
   align-items: center;
   position: relative;
   margin-bottom: 20px;
+  transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.input-container:hover{
+  transform: scale(1.1);
 }
 
 .city-input {
@@ -302,6 +338,8 @@ p {
   padding-bottom: 10px;
   padding-top: 20px;
   overflow: auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .forecast-items-container::-webkit-scrollbar {
@@ -325,11 +363,12 @@ p {
   padding: 10px;
   text-align: center;
   border-radius: 10px;
-  transition: background 0.3s;
+  transition: background 0.3s ease, transform 0.2s ease;
 }
 
 .forecast-item:hover {
   background: rgba(255, 255, 255, 0.2);
+  transform: scale(1.2);
 }
 
 .forecast-item-img {
