--- a/Fishing Project/style.css
+++ b/Fishing Project/style.css
@@ -76,7 +76,7 @@ body {
   transition: background 0.3s ease, transform 0.2s ease;
 }
 
-.input-section :hover{
+.input-section :hover {
   transform: scale(1.2);
 }
 
@@ -143,7 +143,7 @@ li {
   transition: background 0.3s ease, transform 0.2s ease;
 }
 
-.fish-icon:hover{
+.fish-icon:hover {
   transform: scale(1.7);
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 1);
@@ -197,26 +197,28 @@ p {
 
 .custom-file-upload {
   display: inline-block;
-  padding: 6px 12px;
+  padding: 8px 12px;
   cursor: pointer;
   background-color: #007bff;
   color: white;
-  border-radius: 4px;
+  width: 70%;
+  align-items: center;
+  margin-left: 30px;
   border-radius: 20px;
   transition: background 0.3s ease, transform 0.2s ease;
 }
 
 .custom-file-upload:hover {
-  background-color: #0056b3;
+  background-color: #1539b1;
 }
 
 #imageUpload {
   display: none;
 }
 
+
+
 /* Styles for weather container */
-
-
 
 .main-container {
   position: relative;
@@ -241,7 +243,7 @@ p {
   transition: background 0.3s ease, transform 0.2s ease;
 }
 
-.input-container:hover{
+.input-container:hover {
   transform: scale(1.1);
 }
 
