--- a/Fishing Project/style.css
+++ b/Fishing Project/style.css
@@ -216,6 +216,50 @@ p {
   display: none;
 }
 
+/*image popup*/
+
+.popup-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-image {
+  max-width: 80%;
+  max-height: 80%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px white;
+}
+
+.close-btn {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+}
+
+#closeImagePopup{
+  transition: background 0.3s ease, transform 0.2s ease;
+border-radius: 50%;
+width: 30px;
+
+}
+
+#closeImagePopup:hover {
+  background: #ff2222;
+  transform: scale(1.2);
+}
+
+
 
 
 /* Styles for weather container */
@@ -515,3 +559,5 @@ textarea {
 #commentInput {
   font-size: medium;
 }
+
+
